--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -9,6 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
+    "test:cov": "vitest --coverage",
+    "db:pull": "dotenv -e .env.local prisma db pull",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -36,11 +38,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.0",
+    "@vitest/coverage-v8": "3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5",
