--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -11,11 +11,14 @@
     "test": "vitest",
     "test:cov": "vitest --coverage",
     "db:pull": "dotenv -e .env.local prisma db pull",
+    "db:gen": "dotenv -e .env.local prisma generate",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@prisma/client": "6.8.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -24,7 +27,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.41"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
