--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -12,7 +12,9 @@
     "test:cov": "vitest --coverage",
     "db:pull": "dotenv -e .env.local prisma db pull",
     "db:gen": "dotenv -e .env.local prisma generate",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@prisma/client": "6.8.2",
@@ -32,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/nextjs": "^9.0.4",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -46,9 +50,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-storybook": "^9.0.4",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "prisma": "^6.8.2",
+    "storybook": "^9.0.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5",
