--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -29,6 +29,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.41"
   },
