--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:ws": "NODE_OPTIONS='--loader ts-node/esm --no-warnings' ts-node server.mts",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -58,6 +59,7 @@
     "prisma": "^6.8.2",
     "storybook": "^9.0.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
