--- a/spring/spring-demo/build.gradle
+++ b/spring/spring-demo/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test', Test) {
-//test {
+//tasks.named('test', Test) {
+test {
     useJUnitPlatform()
 }
