--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=spring-demo
+server.port=8081
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
