--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -4,3 +4,21 @@ server.port=8081
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
+
+# ?? ?? ??
+logging.level.root=INFO
+
+# ???? ?? ??
+logging.level.com.hana7=DEBUG
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=ERROR
+
+# ?? ?? ??
+logging.file.name=logs/spring-demo.log
+logging.file.path=logs/
+
+# ?? ?? ??
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ?? ?? ??
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
