--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.url=jdbc:mysql://localhost:3309/testdb?serverTimezone=Asia/Seo
 spring.datasource.username=root
 spring.datasource.password=TestdbRoot
 
+# H2DB  (jdbc:h2:~/testdb)
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
 mybatis.mapper-locations=mybatis/map/*.xml
