--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.datasource.password=TestdbRoot
 #spring.datasource.username=sa
 #spring.datasource.password=
 
+# JPA
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
