--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -14,11 +14,17 @@ spring.datasource.password=TestdbRoot
 #spring.datasource.password=
 
 # JPA
+# on dev
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+# everywhere
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.batch_size=10
+
 
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
