--- a/spring/spring-demo/.gitignore
+++ b/spring/spring-demo/.gitignore
@@ -3,6 +3,7 @@ HELP.md
 build/
 logs/
 mysql/
+src/main/generated/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
