--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -1,49 +1,39 @@
 spring.application.name=spring-demo
 server.port=8081
-
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3309/testdb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=TestdbRoot
-
 # H2DB  (jdbc:h2:~/testdb)
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
-
 # JPA
 # on dev
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-
 # everywhere
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.batch_size=10
-
-
+# swagger
+springdoc.swagger-ui.path=/swagger.html
+springdoc.api-docs.path=/hanaweb/api-docs
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
 mybatis.mapper-locations=mybatis/map/*.xml
-
-
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
-
 logging.level.root=INFO
-
 logging.level.com.hana7=DEBUG
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=ERROR
-
 logging.file.name=logs/spring-demo.log
 logging.file.path=logs/
-
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
