--- a/spring/spring-demo/.gitignore
+++ b/spring/spring-demo/.gitignore
@@ -4,6 +4,8 @@ build/
 logs/
 mysql/
 src/main/generated/
+src/main/resources/tmp
+src/main/resources/upload
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
