--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=spring-demo
 server.port=8081
+# upload files
+spring.servlet.multipart.location=src/main/resources/static/tmp
+spring.servlet.multipart.max-file-size=900KB
+spring.servlet.multipart.max-request-size=10MB
+upload.path=src/main/resources/static/upload
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3309/testdb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
