--- a/spring/spring-demo/build.gradle
+++ b/spring/spring-demo/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    implementation 'net.coobird:thumbnailator:0.4.19'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
     compileOnly 'org.projectlombok:lombok'
