--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -31,9 +31,11 @@ springdoc.api-docs.path=/hanaweb/api-docs
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
 mybatis.mapper-locations=mybatis/map/*.xml
+# devtool
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
+# logging
 logging.level.root=INFO
 logging.level.com.hana7=DEBUG
 logging.level.org.springframework=WARN
