--- a/spring/spring-demo/build.gradle
+++ b/spring/spring-demo/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'net.coobird:thumbnailator:0.4.19'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
