--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=TestdbRoot
 # JPA
 # on dev
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 # everywhere
@@ -40,6 +40,7 @@ logging.level.root=INFO
 logging.level.com.hana7=DEBUG
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=ERROR
+#logging.level.org.springframework.security.web=trace
 logging.file.name=logs/spring-demo.log
 logging.file.path=logs/
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
