--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=spring-demo
 server.port=8081
+spring.messages.basename=messages/message
+# actuator
+management.server.port=9001
+# management.server.address=127.0.0.1
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
+management.endpoint.metrics.access=read_only
+management.endpoint.shutdown.access=unrestricted
+management.endpoint.health.show-details=always
 # upload files
 spring.servlet.multipart.location=src/main/resources/static/tmp
 spring.servlet.multipart.max-file-size=900KB
