swagger api-docs.path

--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.jdbc.batch_size=10
 # swagger
 springdoc.swagger-ui.path=/swagger.html
-springdoc.api-docs.path=/hanaweb/api-docs
+springdoc.api-docs.path=/v3/api-docs
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
 mybatis.mapper-locations=mybatis/map/*.xml
