--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -45,12 +45,14 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 # logging
-logging.level.root=INFO
-logging.level.com.hana7=DEBUG
-logging.level.org.springframework=WARN
+#logging.level.root=INFO
+#logging.level.com.hana7=DEBUG
+#logging.level.org.springframework=WARN
 logging.level.org.hibernate=ERROR
+logging.level.com.hana7.springdemo.jpa.controller=DEBUG
+logging.level.com.hana7.springdemo.jpa.service=DEBUG
 #logging.level.org.springframework.security.web=trace
-logging.file.name=logs/spring-demo.log
-logging.file.path=logs/
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.file.name=logs/spring-demo.log
+#logging.file.path=logs/
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
