--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -34,6 +34,9 @@ spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.batch_size=10
+# batch
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=always
 # swagger
 springdoc.swagger-ui.path=/swagger.html
 springdoc.api-docs.path=/v3/api-docs
