--- a/spring/spring-demo/docker-compose.yml
+++ b/spring/spring-demo/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+      - --log_bin_trust_function_creators=1
+      - --default-time-zone=Asia/Seoul
 
     volumes:
       - ./mysql:/var/lib/mysql
