--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.datasource.password=TestdbRoot
 # JPA
 # on dev
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 # everywhere
