--- a/react/rbvite/package.json
+++ b/react/rbvite/package.json
@@ -12,12 +12,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-compiler-runtime": "^19.1.0-rc.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
@@ -29,9 +31,11 @@
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
@@ -43,6 +47,7 @@
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
     "storybook": "^8.6.14",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
