--- a/js/s3/package.json
+++ b/js/s3/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "js",
+  "name": "s3",
   "version": "1.0.0",
-  "main": "array.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
