--- a/spring/spring-demo/build.gradle
+++ b/spring/spring-demo/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'software.amazon.awssdk:s3:2.25.39'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
