--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -14,6 +14,11 @@ spring.servlet.multipart.location=src/main/resources/static/tmp
 spring.servlet.multipart.max-file-size=900KB
 spring.servlet.multipart.max-request-size=10MB
 upload.path=src/main/resources/static/upload
+# S3
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=sico2025-uploads
+aws.accessKeyId=AKIA2AAGCF52VMNEN6HI
+aws.secretAccessKey=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
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3309/testdb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
