--- a/spring/spring-demo/.gitignore
+++ b/spring/spring-demo/.gitignore
@@ -10,6 +10,8 @@ src/main/resources/static/upload
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+application-secret.properties
+
 ### STS ###
 .apt_generated
 .classpath
