--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -14,25 +14,6 @@ spring.servlet.multipart.location=src/main/resources/static/tmp
 spring.servlet.multipart.max-file-size=900KB
 spring.servlet.multipart.max-request-size=10MB
 upload.path=src/main/resources/static/upload
-# S3
-cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=sico2025-uploads
-# MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3309/testdb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=TestdbRoot
-# H2DB  (jdbc:h2:~/testdb)
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-# JPA
-# on dev
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
 # everywhere
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -46,10 +27,6 @@ springdoc.api-docs.path=/v3/api-docs
 # MyBatis
 mybatis.type-aliases-package=com.hana7.springdemo.dto
 mybatis.mapper-locations=mybatis/map/*.xml
-# devtool
-spring.devtools.livereload.enabled=true
-spring.devtools.restart.enabled=true
-spring.devtools.restart.additional-paths=src/main/java
 # logging
 #logging.level.root=INFO
 #logging.level.com.hana7=DEBUG
@@ -62,3 +39,4 @@ logging.level.com.hana7.springdemo.jpa.service=DEBUG
 #logging.file.path=logs/
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+spring.profiles.include=secret
