--- a/spring/spring-demo/.gitignore
+++ b/spring/spring-demo/.gitignore
@@ -11,6 +11,9 @@ src/main/resources/static/upload
 !**/src/test/**/build/
 
 application-secret.properties
+abc.txt
+bbb.txt
+ccc.txt
 
 ### STS ###
 .apt_generated
