--- a/spring/spring-demo/build.gradle
+++ b/spring/spring-demo/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     testRuntimeOnly 'com.h2database:h2'
 }
 
+jar {
+    enabled = false
+}
+
 //tasks.named('test', Test) {
 test {
     useJUnitPlatform()
