--- a/.github/workflows/ttt.yml
+++ b/.github/workflows/ttt.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: scp next to was
         run: |
-          scp my-app/next.zip ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/
+          scp next/my-app/next.zip ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/
 
       - name: restart next
         run: |
