--- a/.github/workflows/ttt.yml
+++ b/.github/workflows/ttt.yml
@@ -76,4 +76,4 @@ jobs:
 
       - name: scp jar to was
         run: |
-          scp spring/demo/build/libs/*.jar ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/hana.jar
+          scp spring/springdemo/build/libs/*.jar ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/hana.jar
