github action test

--- a/spring/spring-demo/src/main/resources/application.properties
+++ b/spring/spring-demo/src/main/resources/application.properties
@@ -39,4 +39,14 @@ logging.level.com.hana7.springdemo.jpa.service=DEBUG
 #logging.file.path=logs/
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+# JPA on dev
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+# devtool
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
+# security
 spring.profiles.include=secret
