--- a/spring/spring-demo/.gitignore
+++ b/spring/spring-demo/.gitignore
@@ -11,6 +11,7 @@ src/main/resources/static/upload
 !**/src/test/**/build/
 
 application-secret.properties
+application-prod.properties
 
 ### STS ###
 .apt_generated
