--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.0",
     "@vitest/coverage-v8": "3.1.4",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
