--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v5.0.0
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: set props
+        working-directory: spring/spring-demo
+        run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+
+      - name: grant exe to gradlew
+        working-directory: spring/spring-demo
+        run: chmod +x gradlew
+
+      - name: build with gradle
+        working-directory: spring/spring-demo
+        run: ./gradlew clean build -x test
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
@@ -32,7 +49,7 @@ jobs:
 
       - name: Build with Next.js
         working-directory: next/my-app
-        run: pnpm build
+        run: pnpm next build
 
       - name: zip next
         working-directory: next/my-app
@@ -49,3 +66,21 @@ jobs:
       - name: scp next to was
         run: |
           scp next/my-app/next.zip ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/
+
+      - name: restart next
+        run: |
+          ssh ec2-user@${{ secrets.WAS }} '
+            cd /home/ec2-user/workspace
+            rm -rf my-app/.next
+            unzip -q next.zip -d my-app
+          '
+      - name: scp jar to was
+        run: |
+          scp spring/spring-demo/build/libs/*.jar ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/hana.jar
+
+      - name: restart spring
+        run: |
+          ssh ec2-user@${{ secrets.WAS }} '
+            cd /home/ec2-user/workspace &&
+            sudo systemctl restart springboot
+          '
