--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: zip next
         working-directory: next/my-app
-        run: zip -rq next.zip .next/standalone .next/static public package.json
+        run: zip -rq next.zip .next/standalone .next/static public node_modules package.json
 
       - name: setup ssh
         run: |
@@ -71,7 +71,7 @@ jobs:
         run: |
           ssh ec2-user@${{ secrets.WAS }} '
             cd /home/ec2-user/workspace
-            rm -rf my-app/.next
+            rm -rf my-app
             unzip -q next.zip -d my-app 
           '
       - name: scp jar to was
