--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.41"
   },
