--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: zip next
         working-directory: next/my-app
-        run: zip -rq next.zip .next/standalone .next/static public package.json
+        run: zip -rq next.zip .next public node_modules package.json
 
       - name: setup ssh
         run: |
