--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,7 +54,7 @@ jobs:
         working-directory: next/my-app
         run: pnpm build
 
-      - name: zip next
+      - name: zip next.zip
         working-directory: next/my-app
         run: zip -rq next.zip .next public package.json pnpm-lock.yaml next.config.ts .env node_modules
 
