--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: SpringDemo CI/CD
 on:
   push:
-    branches: [ develop ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -9,23 +9,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v5.0.0
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: set props
-        working-directory: spring/spring-demo
-        run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
-
-      - name: grant exe to gradlew
-        working-directory: spring/spring-demo
-        run: chmod +x gradlew
-
-      - name: build with gradle
-        working-directory: spring/spring-demo
-        run: ./gradlew clean build -x test
 
       - name: Install Node
         uses: actions/setup-node@v4
@@ -41,7 +24,7 @@ jobs:
       - name: Install dependencies
         working-directory: next/my-app
         run: |
-          pnpm install --prod --frozen-lockfile
+          pnpm install --prod
           pnpm add styled-jsx
           pnpm add @swc/helpers
 
@@ -56,7 +39,7 @@ jobs:
 
       - name: zip next
         working-directory: next/my-app
-        run: zip -rq next.zip .next public package.json pnpm-lock.yaml next.config.ts .env node_modules
+        run: zip -rq next.zip .next .env
 
       - name: setup ssh
         run: |
@@ -76,14 +59,4 @@ jobs:
             cd /home/ec2-user/workspace
             rm -rf my-app
             unzip -q next.zip -d my-app 
-          '
-      - name: scp jar to was
-        run: |
-          scp spring/spring-demo/build/libs/*.jar ec2-user@${{ secrets.WAS }}:/home/ec2-user/workspace/hana.jar
-
-      - name: restart spring
-        run: |
-          ssh ec2-user@${{ secrets.WAS }} '
-            cd /home/ec2-user/workspace &&
-            sudo systemctl restart springboot
           '
