--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,8 @@ jobs:
         working-directory: next/my-app
         run: |
           pnpm install
+          pnpm add styled-jsx
+          pnpm add @swc/helpers
 
       - name: set .env
         working-directory: next/my-app
