--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,6 +27,8 @@ jobs:
           pnpm install --shamefully-hoist
           pnpm add styled-jsx
           pnpm add @swc/helpers
+          pnpm add @next/env
+          pnpm db:gen
 
       - name: set .env
         working-directory: next/my-app
