--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -18,9 +18,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@next/env": "^15.5.2",
     "@prisma/client": "6.8.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@swc/helpers": "^0.5.17",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
