--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,15 +31,15 @@ jobs:
         run:
           echo "${{ secrets.ENV }}" > .env
 
-      - name: generate prisma
-        working-directory: next/my-app
-        run:
-          pnpm db:gen
-
       - name: Build with Next.js
         working-directory: next/my-app
         run: pnpm build
 
+      - name: generate prisma
+        working-directory: next/my-app
+        run:
+          pnpm prisma generate
+        
       - name: cp modules not include standalone
         working-directory: next/my-app
         run: |
