--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "6.15.0",
     "@storybook/addon-onboarding": "^9.0.4",
     "@storybook/nextjs": "^9.0.4",
     "@tailwindcss/postcss": "^4",
