--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,7 +46,7 @@ jobs:
           mkdir -p .next/standalone/node_modules/@next/env
           cp -r ./node_modules/styled-jsx/* .next/standalone/node_modules/styled-jsx/
           cp -r ./node_modules/@swc/helpers/* .next/standalone/node_modules/@swc/helpers/
-          cp -r ./node_modules/@swc/@next/env/* .next/standalone/node_modules/@next/env/
+          cp -r ./node_modules/@next/env/* .next/standalone/node_modules/@next/env/
           cp -r .next/static .next/standalone/.next/
 
       - name: zip next
